# rabbitmq-example-faststream

./: .coverage  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  validate-pr-title.yml
service/: __init__.py
service/app/: __init__.py  messenger.py  server.py
service/rmq/: __init__.py  config.py  definition.py  messaging.py  model.py
tests/: __init__.py
tests/rmq/: __init__.py  test_config.py  test_messaging.py  test_model.py
